# lab05

./: .coveralls.yml  CMakeLists.txt  README.md
.github/workflows/: biuld.yml  ci.yml  cmake.yml
solver_application/: CMakeLists.txt
